Following Button Bug
When you followed a Topic the "Following" text would be cut off by, the Dropdown Menu button.

--- a/material.less
+++ b/material.less
@@ -247,7 +247,7 @@ width: 22%;
 .DiscussionPage-nav .ButtonGroup:not(.itemCount1) .Dropdown-toggle {
     width: 0%;
     margin-top: -36px;
-    margin-left: 111px;
+    margin-left: 150px;
     border: none;
     box-shadow: none;
     border-top-right-radius: 2px;
